crates/carta/tests/snapshots/golden_writer__beamer__common__link-autolink.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\url{http://example.com}
\end{frame}
