crates/carta/tests/snapshots/golden_writer__beamer__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
before \href{http://example.com}{} after
\end{frame}
