crates/carta/tests/snapshots/golden_writer__beamer__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
Padding padding padding padding \href{http://example.com/path}{a multi
word link label here} and trailing words to push wrapping.
\end{frame}
