crates/carta/tests/snapshots/golden_writer__beamer__common__link-title-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\protect\phantomsection\label{l}\href{http://example.com}{text}
\end{frame}
