crates/carta/tests/snapshots/golden_writer__beamer__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\href{http://example.com/a\%20b\#frag}{x}
\end{frame}
