crates/carta/tests/snapshots/golden_writer__beamer__common__list-bullet-in-definition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{description}
\item[term]
\begin{itemize}
\tightlist
\item
  alpha
\item
  beta
\end{itemize}
\end{description}
\end{frame}
