crates/carta/tests/snapshots/golden_writer__beamer__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\emph{emph with \textbf{strong} inside} end
\end{frame}
