crates/carta/tests/snapshots/golden_writer__beamer__common__nonascii-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
café résumé naïve
\end{frame}
